[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "oracle"
path = "src/main.rs"
