[package]
name = "compliance-registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
privacy-passport = { path = "../privacy_passport", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
