[package]
name = "crop-token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
warehouse-oracle = { path = "../warehouse_oracle", features = ["testutils"] }
compliance-registry = { path = "../compliance_registry", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
