[package]
name = "forward-hedge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
collateral-vault = { path = "../collateral_vault", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
